log
Fri 17 Mar 2023 05:42:29 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
c608dbb
Fri 17 Mar 2023 05:50:16 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5f065fd
Fri 17 Mar 2023 05:54:33 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV’:
exercises.c:107:17: error: invalid operands to binary + (have ‘Vector’ and ‘Vector’)
  107 |     c[i] = a[i] + b[i];
      |            ~~~~ ^ ~~~~
      |             |      |
      |             Vector Vector
Compilation failed
9dbb7f1
Fri 17 Mar 2023 05:58:08 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|5
total_score: 20/70
2c75a8c
Fri 17 Mar 2023 05:58:41 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
32f800c
Fri 17 Mar 2023 05:59:59 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
test.c: In function ‘asignarValor’:
test.c:251:5: error: ‘main’ is normally a non-static function [-Werror=main]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:271:1: error: expected declaration or statement at end of input
  271 | }
      | ^
At top level:
test.c:251:5: error: ‘main’ defined but not used [-Werror=unused-function]
  251 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
6a02f01
Fri 17 Mar 2023 06:00:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
1677e14
Fri 17 Mar 2023 06:01:45 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
0c43325
Fri 17 Mar 2023 06:07:17 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
2daddb5
